--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>First Webpage</title>
-    </head>
-    <body>
-        <h1>Hello my name is pratiksha.</h1>
-        <p>And this is my first webpage and it is very good!!</p>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+<h1>I am heading 1</h1>
+<h2>I am heading 2</h2>
+<h3>I am heading 3</h3>
+<h4>I am heading 4</h4>
+<h5>I am heading 5</h5>
+<h6>I am heading 6</h6>
+</body>
 </html>
